fix(breadcrumb): increased line height for better readability when elements overflow

--- a/src/definitions/collections/breadcrumb.less
+++ b/src/definitions/collections/breadcrumb.less
@@ -23,7 +23,7 @@
 *******************************/
 
 .ui.breadcrumb {
-  line-height: 1;
+  line-height: 1.5;
   display: @display;
   margin: @verticalMargin 0;
   vertical-align: @verticalAlign;
